-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11.0.23
-
Component/s: hotspot
-
b01
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/bits/dd/openjdk-jdk11/src/hotspot/share/classfile/metadataOnStackMark.cpp:50), pid=4040911, tid=4040937
# assert(SafepointSynchronize::is_at_safepoint()) failed: sanity check
#
# JRE version: OpenJDK Runtime Environment (11.0.23) (fastdebug build 11.0.23-internal+0-adhoc.bits.openjdk-jdk11)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 11.0.23-internal+0-adhoc.bits.openjdk-jdk11, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport -p%p -s%s -c%c -d%d -P%P -u%u -g%g -- %E" (or dumping to /instance_storage/openjdk-jdk11/build/linux-x86_64-normal-server-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_thread_GetStackTrace/scratch/0/core.4040911)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
Stack: [0x00007f405c4ed000,0x00007f405c5ee000], sp=0x00007f405c5ebad0, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a7a86a] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x1ca
V [libjvm.so+0x1a7b9d5] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x35
V [libjvm.so+0xc3141a] report_vm_error(char const*, int, char const*, char const*, ...)+0x10a
V [libjvm.so+0x156280b] MetadataOnStackMark::MetadataOnStackMark(bool)+0xdb
V [libjvm.so+0xa8bb98] ClassLoaderDataGraph::do_unloading(bool)+0x48
V [libjvm.so+0x1ae73fd] WB_CleanMetaspaces+0x15d
j sun.hotspot.WhiteBox.cleanMetaspaces()V+0
j GetStackTraceAndRetransformTest.main([Ljava/lang/String;)V+14
v ~StubRoutines::call_stub
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/bits/dd/openjdk-jdk11/src/hotspot/share/classfile/metadataOnStackMark.cpp:50), pid=4040911, tid=4040937
# assert(SafepointSynchronize::is_at_safepoint()) failed: sanity check
#
# JRE version: OpenJDK Runtime Environment (11.0.23) (fastdebug build 11.0.23-internal+0-adhoc.bits.openjdk-jdk11)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 11.0.23-internal+0-adhoc.bits.openjdk-jdk11, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport -p%p -s%s -c%c -d%d -P%P -u%u -g%g -- %E" (or dumping to /instance_storage/openjdk-jdk11/build/linux-x86_64-normal-server-fastdebug/test-support/jtreg_test_hotspot_jtreg_serviceability_jvmti_thread_GetStackTrace/scratch/0/core.4040911)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
Stack: [0x00007f405c4ed000,0x00007f405c5ee000], sp=0x00007f405c5ebad0, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a7a86a] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x1ca
V [libjvm.so+0x1a7b9d5] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x35
V [libjvm.so+0xc3141a] report_vm_error(char const*, int, char const*, char const*, ...)+0x10a
V [libjvm.so+0x156280b] MetadataOnStackMark::MetadataOnStackMark(bool)+0xdb
V [libjvm.so+0xa8bb98] ClassLoaderDataGraph::do_unloading(bool)+0x48
V [libjvm.so+0x1ae73fd] WB_CleanMetaspaces+0x15d
j sun.hotspot.WhiteBox.cleanMetaspaces()V+0
j GetStackTraceAndRetransformTest.main([Ljava/lang/String;)V+14
v ~StubRoutines::call_stub
- relates to
-
JDK-8322690 Accessing jmethodID might lead to spurious crashes
-
- Resolved
-