8322752: [11u] GetStackTraceAndRetransformTest.java is failing assert

Reviewed-by: goetz