src/hotspot/share/prims/whitebox.cpp
@@ -2094,8 +2094,16 @@ WB_ENTRY(jstring, WB_GetLibcName(JNIEnv* env, jobject o))
   return info_string;
 WB_END
 
+class VM_WhiteBoxCleanMetaspaces : public VM_WhiteBoxOperation {
+ public:
+  void doit() {
+    ClassLoaderDataGraph::do_unloading(true);
+  }
+};
+
 WB_ENTRY(void, WB_CleanMetaspaces(JNIEnv* env, jobject target))
-  ClassLoaderDataGraph::do_unloading(true);
+  VM_WhiteBoxCleanMetaspaces op;
+  VMThread::execute(&op);
 WB_END
 
 #define CC (char*)
